--- a/index.html
+++ b/index.html
@@ -5,46 +5,69 @@
 	<title>Shawn's Picks</title>
 	<script type="text/javascript" src="js/vendor/angular.min.js"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=PT+Serif:400i" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css" type="text/css" />
 	<!--<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+
+
+
 <body ng-app="SuggestionBox" ng-controller="HomeController">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<h1 class="main-title col-xs-4 col-sm-4 col-md-12">Shawn's Picks</h1>
-		</div>
-		<div class="main" ng-repeat="artist in artists">
-
-			<div class="row home-display__album">
-
-				<img class="col-sm-6 cover-img" ng-src="{{artist.album.cover}}">
-				<div class="col-sm-6 album-info">
-					<div class="col-xs-6" <p>Artist: {{ artist.artist }}</p>
-						<p>Album: {{ artist.album.title }}</p>
-					</div>
-					<div class="col-xs-6">
-						<p>Genre: {{ artist.genre }}</p>
-						<div class="btn">More</div>
+			<div class="main col-xs-12 col-sm-5 col-md-4">
+				<div class="affix">
+					<h1 class="main-title">SP</h1>
+					<div class="sub">
+						<!--<h3 class="main-sub">Shawn's Picks</h3>-->
+						<!--<p>Music recomendations, new and old alike</p>-->
 					</div>
 				</div>
+			</div>
+			<!--<div class="main" ng-repeat="artist in artists">-->
 
+			<!--	<div class="row home-display__album">-->
+
+			<!--		<img class="col-sm-6 cover-img" ng-src="{{artist.album.cover}}">-->
+			<!--		<div class="col-sm-6 album-info">-->
+			<!--			<div class="col-xs-6" <p>Artist: {{ artist.artist }}</p>-->
+			<!--				<p>Album: {{ artist.album.title }}</p>-->
+			<!--			</div>-->
+			<!--			<div class="col-xs-6">-->
+			<!--				<p>Genre: {{ artist.genre }}</p>-->
+			<!--				<div class="btn">More</div>-->
+			<!--			</div>-->
+			<!--		</div>-->
+
+			<!--	</div>-->
+			<!--</div>-->
+
+			<div class="col-xs-12 col-sm-7 col-md-8 artist">
+				<div ng-view></div>
 			</div>
 		</div>
 	</div>
 
 
 
+
 	<!-- Modules -->
-	<script type="text/javascript " src="js/app.js "></script>
+	<script type="text/javascript " src="js/app.js"></script>
 
 
 	<!-- Controllers -->
-	<script type="text/javascript " src="js/controllers/HomeControllers.js "></script>
+	<script type="text/javascript" src="js/controllers/HomeController.js"></script>
+	<script type="text/javascript" src="js/controllers/AlbumController.js"></script>
 
 	<!-- Services -->
-	<script type="text/javascript " src="js/services/artists.js "></script>
+	<script type="text/javascript" src="js/services/artists.js"></script>
+
+	<!-- Styling etc. -->
+	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
 
