album section updated

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <body ng-app="SuggestionBox" ng-controller="HomeController">
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div class="main col-xs-12 col-sm-5 col-md-4">
 				<div class="affix">
